Text off-screen render fix (#351)
Fixes #317

--- a/www-root/content/css/decred-v5.css
+++ b/www-root/content/css/decred-v5.css
@@ -1501,6 +1501,7 @@ body {
   display: block;
   width: 460px;
   float: left;
+  max-width: 100%;
 }
 
 .modalparagraph.right {
